# markdown_lab

./: .gitignore  .sourcery.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_TUI_REDESIGN_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  JS_RENDERING.md  LICENSE  MIGRATION_GUIDE.md  Makefile  OPTIMIZATION_SUMMARY.md  PLANNING.md  README.md  REFACTORING_SUMMARY.md  TASKS.md  TUI_DEVELOPMENT_RULES.md  bs4.pyi  chunk_utils.py  demo_chunks.md  demo_cli.py  demo_formats.py  demo_json.json  demo_links.txt  demo_test.md  demo_xml.xml  final_test.json  flowchart.dot  generate_flowchart.py  hardcoded_main.py  hardcoded_version.py  hello.py  interactive_test.md  justfile  links.txt  linter.py  main.py  markdown_lab_rs.py  mypy.ini  (+15 more)
.claude/agents/: README.md
.claude/agents/architecture/: markdown-lab-architect.md
.claude/agents/development/: markdown-lab-developer.md
.claude/agents/optimization/: chunking-semantic-expert.md  http-cache-network-specialist.md  rust-python-optimizer.md
.claude/agents/testing/: test-coverage-guardian.md
.claude/agents/workflow/: planning-task-coordinator.md
.cursor/rules/: README.md  animations-and-effects.mdc  architecture-patterns.mdc  color-and-gradients.mdc  design-principles.mdc  layout-and-composition.mdc  python-coding-standards.mdc  rust-pyo3-standards.mdc  svg-fundamentals.mdc  typography-and-text.mdc
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml  claude.yml  memory-check.yml  python-package.yml  release.yml  rust.yml  scorecard.yml  test.yml
.trunk/: trunk.yaml
.trunk/configs/: .yamllint.yaml  svgo.config.mjs
batch_output/: html.md
benches/: cmds.md  markdown_bench.rs  optimization_bench.rs  parallel_bench.rs
chunks/: chunks.jsonl
demo_batch_output/: html.md  json.md
demo_chunks/: chunks.jsonl
demo_output/: demo.json  demo.markdown  demo.xml  output.json  output.md  output.xml
docs/: COMPATIBILITY.md  INSTALL.md  JS_RENDERING.md  OPTIMIZATION_SUMMARY.md  system-architecture.mmd
docs/assets/: flowchart.dot
e2e_test_chunked.md/: item.md  list.md  rothgar_awesome-tuis.md
examples/: README.md  config_demo.py  demo_formats.py  hello.py  logging_demo.py  property_testing_demo.py  property_testing_simple_demo.py  run_property_tests.py
examples/demo_output/: output.json  output.markdown  output.xml
markdown_lab/: README.md  __init__.py  __main__.py  bs4.pyi  cli.py  main.py  markdown_lab_rs.py  sitemap_utils.py  tui.py  types.py
markdown_lab/core/: __init__.py  async_cache.py  async_scraper.py  cache.py  cleanup.py  client.py  config.py  config_v2.py  converter.py  errors.py  logging.py  rust_backend.py  scraper.py  throttle.py
markdown_lab/formats/: __init__.py  base.py  json.py  markdown.py  xml.py
markdown_lab/network/: __init__.py  advanced_cache.py  async_client.py  cache.py  client.py  rate_limiter.py  throttle.py
markdown_lab/processing/: __init__.py  streaming_parser.py
markdown_lab/utils/: __init__.py  async_sitemap_utils.py  cache_utils.py  chunk_utils.py  sitemap_utils.py  thread_pool.py  url_utils.py  version.py
scripts/: activate_venv.sh  fix_error_handling.py  generate_flowchart.py  performance_validation.py  requirements.txt  run_benchmarks.ps1  setup_viz.ps1  system-wide-install.ps1  system-wide-install.sh  update_imports.py  validate-no-mocks.py  visualize_benchmarks.py
src/: __init__.py  chunker.rs  cleanup.rs  html_parser.rs  js_renderer.rs  lib.rs  markdown_converter.rs  optimized_converter.rs  parallel_processor.rs  tests.rs
test_data/: large.html  medium.html  sample.md
tests/: conftest.py  test_advanced_cache.py  test_advanced_cache.py.skip  test_async_client.py  test_benchmarks.py  test_chunk_utils.py  test_config_v2.py  test_logging.py  test_main.py  test_property_based.py  test_property_based_simple.py  test_python_bindings.py  test_rate_limiter.py  test_sitemap_utils.py  test_streaming_parser.py
tests/fixtures/: html_samples.py  large_document.html  rust_samples.py
tests/integration/: test_async_processing.py  test_comprehensive.py  test_http_server.py  test_rust_error_handling.py
tests/rust/: test_python_bindings.py  test_rust_backend.py  test_rust_backend_no_mocks.py
tests/unit/: test_async_cache.py  test_cache_limits.py  test_chunk_utils.py  test_client.py  test_client_no_mocks.py  test_converter.py  test_converter_async.py  test_edge_cases.py  test_main.py  test_main_no_mocks.py  test_markdown_lab_rs_wrapper.py  test_rust_backend.py  test_rust_backend_convert_call.py  test_sitemap_utils.py  test_thread_pool.py
