[package]
name = "markdown_lab"
version = "0.1.0"
edition = "2024"

[lib]
name = "markdown_lab_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
scraper = "0.18.1"
url = "2.5.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
headless_chrome = { version = "1.0.8", optional = true }
tokio-test = "0.4.3"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
quick-xml = { version = "0.37.3", features = ["serialize"] }

[features]
default = []
real_rendering = ["headless_chrome"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tokio = { version = "1.36.0", features = ["full", "test-util"] }

[[bench]]
name = "markdown_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = false
