[package]
name = "markdown_lab"
version = "1.0.0"
edition = "2024"

[lib]
name = "markdown_lab_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
scraper = "0.23.1"
url = "2.5.4"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
headless_chrome = { version = "1.0.17", optional = true }
tokio-test = "0.4.4"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
quick-xml = { version = "0.38.0", features = ["serialize"] }
once_cell = "1.21.3"
smallvec = "1.15.1"
rayon = "1.10.0"

[features]
default = []
real_rendering = ["headless_chrome"]

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
tokio = { version = "1.46.1", features = ["full", "test-util"] }

[[bench]]
name = "markdown_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = false
