[project]
name = "markdown-lab"
version = "1.0.0"
description = "HTML to Markdown converter with support for multiple output formats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.2",
  "psutil>=5.9.5;platform_system!='Linux'",
  "pytest>=8.4.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "textual>=3.0.0",
  "click>=8.0.0",
  "maturin>=1.9.0",
  "patchelf>=0.17.2.2",
  "sourcery>=1.37.0",
  "black>=25.1.0",
  "isort>=6.0.1",
  "pylint>=3.3.7",
  "ruff>=0.11.13",
  "ty>=0.0.1a12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "black>=23.7.0",
  "ruff>=0.0.280",
  "mypy>=1.5.1",
  "isort>=5.12.0",
  "sourcery>=1.11.0",
  "pytest-benchmark>=4.0.0",
]
test = ["pytest>=7.4.0", "pytest-benchmark>=4.0.0"]
js = ["playwright>=1.37.0"]

[project.scripts]
markdown-lab = "markdown_lab.__main__:main"
mlab = "markdown_lab.cli:cli_main"
mlab-tui = "markdown_lab.tui:main"
mlab-legacy = "markdown_lab.core.scraper:main"

[project.urls]
Homepage = "https://github.com/ursisterbtw/markdown-lab"
Documentation = "https://github.com/ursisterbtw/markdown-lab#readme"
Issues = "https://github.com/ursisterbtw/markdown-lab/issues"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
]
addopts = "--benchmark-disable"

[tool.pytest-benchmark]
min_rounds = 5
max_time = 1.0
save = true
save_data = true
group_by = "group"
sort = "name"
columns = [
  "min",
  "max", 
  "mean",
  "stddev",
  "median",
  "iqr",
  "outliers",
  "rounds",
  "iterations",
]
timer = "time.perf_counter"
disable_gc = true
warmup = true
skip = false
only = false
max_iterations = 100000
min_time = 0.000005

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM", "T20", "RET", "ERA", "PL"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[build-system]
requires = ["wheel", "setuptools", "maturin>=1.6,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest-benchmark>=5.1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "markdown_lab.markdown_lab_rs" # Adjust if your Rust module name is different in lib.rs
